<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task1_screen1">


    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="83dp"
        android:layout_marginTop="36dp"
        android:text="@string/welcome_home"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rowCount="2">


        <Button
            android:id="@+id/button2"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_double_bed"
            android:text="@string/bedroom"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/livingroom"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_couch_sofa"
            android:text="@string/living_room"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button5"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_kitchen"
            android:text="@string/kitchen"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button6"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_shower_curtain"
            android:text="@string/bathroomm"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_kids_fairground_playground"
            android:text="@string/kids_room"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_dining"
            android:text="@string/dinning"
            app:layout_column="2"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>